--- a/modulo 2/html5/conceitos/index.html
+++ b/modulo 2/html5/conceitos/index.html
@@ -10,6 +10,7 @@
 <body>
     
     <header>
+        <a id="top-of-page"></a>
         <h1>Conceitos HTML</h1>
     </header>
 
@@ -19,6 +20,7 @@
         <h3>Texte h2</h5>
         <h4>Texte h2</h4>
         <h5>Texte h2</h5>
+        <a id="after-h5"></a>
 
         <p>Texto em Parágrafo 1</p>
         <p>Texto em Parágrafo 2</p>
@@ -68,6 +70,26 @@
 
         <figcaption>Minha foto de perfil.</figcaption>
         <img src="imagens/Foto Perfil.jpg" alt="fotoperfil" width="150px">
+
+        <p>
+            <div>Exemplo de Div 1</div>
+            <div>Exemplo de Div 2</div>
+        </p>
+
+        <p>
+            <span>Exemplo de Span 1</span>
+            <span>Exemplo de Span 2</span>
+        </p>
+
+        <a href="#after-h5">Voltar ao top da página</a>
+
+        <a href="conteudo.html">Ir para Conteúdo</a>
+
+        <a href="https://www.google.com.br">Ir para google</a>
+
+        <button>Clique aqui</button>
+
+        <input type="text"> Teste teste
 
     </main>
     <script defer src="js/script.js"></script>
