Finalização CSS e Início DOM

--- a/modulo 2/css/curriculo-v2/index.html
+++ b/modulo 2/css/curriculo-v2/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Curriculo V1</title>
+    <title>Curriculo V2</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-        <h2>Currículo V1</h2>
+        <h1 class="title">Currículo V2</h2>
     </header>
 
     <main>
-        <h2>Sávio Sant'anna de Sá</h2>
+        <h2 class="author">Sávio Sant'anna de Sá</h2>
 
         <ul>
             <li>Engenheiro Civil</li>
@@ -34,7 +34,7 @@
             <li>AMG Engenharia</li>
         </ul>
 
-        <h2>Tecnologias</h2>
+        <h2 class="title">Tecnologias</h2>
 
         <table>
             <thead>
@@ -56,8 +56,14 @@
                     <td>CSS</td>
                     <td>desde 2021</td>
                 </tr>
+                <tr>
+                    <td>JavaScript</td>
+                    <td>Desde 2022</td>
+                </tr>
             </tbody>
         </table>
+
+        <button>Teste</button>
 
     </main>
 
