--- a/modulo 2/dom/imc/index.html
+++ b/modulo 2/dom/imc/index.html
@@ -11,17 +11,17 @@
     <h1>IMC</h1>
     <p>
         <label for="input-weigth">Peso(kg):</label><br>
-        <input id="input-weigth" type="text" placeholder="60.00">
+        <input id="input-weigth" type="number" value="98" step="0.1">
     </p>
     
     <p>
         <label for="input-heigth">Atura(m):</label><br>
-        <input id="input-heigth" type="text" placeholder="1.8 0">
+        <input id="input-heigth" type="number" value="1.78" step="0.01">
     </p>
 
     <button id="button-calculate-imc">Calcular IMC</button>
 
-    <p id="paragraph-result">O IMC desses dados é <strong>25,02</strong></p>
+    <p id="paragraph-result">O IMC desses dados é <strong id="imc-result"></strong></p>
 
 
 
